# jupyter-switcher

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/jupyter_switch/: __init__.py  switch_between_md_and_ipynb.py
src/jupyter_switcher/: __init__.py
