[project]
name = "jupyter-switcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ChengZi", email = "277584121@qq.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
