[project]
name = "jupyter-switch"
version = "0.1.2"
description = "Convert between Markdown (.md) and Jupyter Notebook (.ipynb) formats"
readme = "README.md"
authors = [
    { name = "ChengZi", email = "277584121@qq.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
jupyter-switch = "jupyter_switch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
